# Project6_Class_Distro

./: requirements_jetson.txt
docs/: README.html  README.md  foxglove_getting_started.md  setting_up_local_inference.md  workspace_node_graph.drawio
docs/images/: arch_launch_robot_bringup.drawio
docs/work/: agent_state.json  functional_model.json  tool_transcript.json
docs/work/robot_gui/: driver.py  driver_stubbed.py  ordered_widget_ids.json  widgets.json
docs/work/wskr_dashboard/: driver.py  ordered_widget_ids.json  widgets.json
foxglove_files/: HBR_COMMAND_DASHBOARD.json  wskr.wskr-panels-0.1.0.foxe
resources/arduino/udev/: 99-arduino.rules
src/arduino/: package.xml  setup.py
src/arduino/arduino/: mecanum_serial_bridge.py
src/arduino/config/: serial.yaml
src/arduino/launch/: arduino.launch.py
src/gstreamer_camera/: package.xml  setup.cfg  setup.py
src/gstreamer_camera/launch/: gstreamer_camera.launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: fake_ekf.yaml
src/robot_description/maps/: map.yaml
src/robot_description/meshes/: chassis.stl
src/robot_description/urdf/: arm_mount.urdf.xacro  chassis.urdf  chassis.xacro  ga_distance_frame.xacro  hiwonder_xarm.urdf  hiwonder_xarm_1s.urdf.xacro  object_dist_frame.xacro  robot.urdf
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/action/: ApproachObject.action  PlayWaypointsDense.action  WskrSearch.action  XArm.action
src/robot_interfaces/msg/: ApproachTargetInfo.msg  ImgDetectionData.msg  TrackedBbox.msg
src/robot_interfaces/srv/: ApproachObject.srv  ArduinoController.srv  BboxToXYZ.srv  DetectObjectsV2.srv  GetEndEffectorCount.srv  GetObjProperties.srv  MoveEndEffectorCount.srv  MoveJoint.srv  QLearning.srv  SelectObject.srv  SetJointState.srv  StartGrasp.srv  StartSearch.srv
src/system_manager_package/: CMakeLists.txt  package.xml
src/system_manager_package/gui/: robot_gui.py
src/system_manager_package/launch/: robot_bringup.launch.py  sys_manager.launch.py  test_collection.launch.py
src/system_manager_package/src/: search_supervisor.py  state_manager.py
src/system_manager_package/system_manager_package/: constants.py
src/utilities/: package.xml  setup.cfg  setup.py
src/utilities/foxglove_extensions/wskr_panels/: CHANGELOG.md  README.md  package-lock.json  package.json
src/utilities/foxglove_extensions/wskr_panels/src/: AutopilotPanel.tsx  CameraArucoPanel.tsx  RobotStatePanel.tsx  SpeedTaperPanel.tsx  ToyApproachPanel.tsx  WhiskerFanPanel.tsx  WskrCameraPanel.tsx  YoloPreviewPanel.tsx  arucoConfig.ts  fanGeometry.ts  index.ts  js-aruco2.d.ts
src/utilities/launch/: wskr_foxglove.launch.py
src/utilities/scripts/: floor_tuner.py  heading_tuner.py  mecanum_teleop.py  select_object_and_start_navigating_live.py  select_object_and_start_navigating_spoof.py  wskr_dashboard.py
src/utilities/utilities/: floor_tuner.py  heading_tuner.py  mecanum_teleop.py  robot_control_panel.py  wskr_dashboard.py  wskr_foxglove_approach_bridge.py  wskr_web_helper.py
src/vision_processing_package/: CMakeLists.txt  package.xml
src/vision_processing_package/config/: camera.yaml  camera_calibration.json
src/vision_processing_package/launch/: vision_processing.launch.py
src/vision_processing_package/models/: pt_to_engine.py
src/vision_processing_package/src/: bbox_to_xyz_service.py  bbox_to_xyz_service_2D.py  gst_cam_node.py  object_selection.py  process_object_vision.py
src/wskr/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/wskr/config/: your_Whisker_Calibration.json  your_floor_params.yaml  your_lens_params.yaml
src/wskr/launch/: wskr.launch.py
src/wskr/resource/: wskr
src/wskr/scripts/: wskr_approach_action.py  wskr_autopilot.py  wskr_dead_reckoning.py  wskr_floor.py  wskr_range.py
src/wskr/wskr/: approach_action_server.py  dead_reckoning_node.py  find_floor.py  lens_model.py  wskr_autopilot.py  wskr_floor_node.py  wskr_range_node.py
src/xarm_object_collector_package/: CMakeLists.txt  package.xml
src/xarm_object_collector_package/data/: your_q_table_here.csv
src/xarm_object_collector_package/launch/: xarm_object_collector_ga.launch.py
src/xarm_object_collector_package/scripts/: get_camera_mapping.py  test_action_goal.py
src/xarm_object_collector_package/src/: Object_collector_action_server.py  controller_class.py  genetic_algorithm.py  q_learning_hand.py  xarm_hardware_node.py
