<?xml version="1.0"?>
<package format="3">
  <name>arduino</name>
  <version>0.0.1</version>
  <description>Serial bridge to the mecanum base Arduino: Twist in, Odometry out.</description>
  <maintainer email="user@example.com">Project5 User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>python3-serial</exec_depend>
  <exec_depend>system_manager_package</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
