<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gstreamer_camera</name>
  <version>0.1.0</version>
  <description>
    Low-latency camera source for the Jetson Orin that wraps a GStreamer
    pipeline and publishes sensor_msgs/CompressedImage (JPEG) on
    camera1/image_raw/compressed. Default pipeline passes raw MJPEG frames
    from v4l2src straight through an appsink — consumers decompress locally.
  </description>
  <maintainer email="user@example.com">Project5 User</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-gi</exec_depend>
  <exec_depend>gir1.2-gstreamer-1.0</exec_depend>
  <exec_depend>gstreamer1.0-plugins-base</exec_depend>
  <exec_depend>gstreamer1.0-plugins-good</exec_depend>
  <exec_depend>gstreamer1.0-tools</exec_depend>
  <exec_depend>system_manager_package</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
