<?xml version="1.0"?>
<package format="3">
  <name>vision_processing_package</name>
  <version>0.0.1</version>
  <description>Vision processing package with custom messages</description>
  <maintainer email="mmichaud@todo.todo">mmichaud</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>robot_interfaces</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-gi</exec_depend>
  <exec_depend>gir1.2-gstreamer-1.0</exec_depend>
  <exec_depend>gstreamer1.0-plugins-base</exec_depend>
  <exec_depend>gstreamer1.0-plugins-good</exec_depend>
  <exec_depend>gstreamer1.0-tools</exec_depend>
  <exec_depend>system_manager_package</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
