<?xml version="1.0"?>
<package format="3">
  <name>wskr</name>
  <version>0.0.1</version>
  <description>Floor masking and whisker range estimation nodes.</description>
  <maintainer email="user@example.com">Project5 User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_python</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>robot_interfaces</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-cv-bridge</exec_depend>
  <exec_depend>python3-opencv-contrib</exec_depend>
  <exec_depend>arduino</exec_depend>
  <exec_depend>vision_processing_package</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>system_manager_package</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
